<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="no_customers">No Customers Yet</string>
    <string name="no_contacts">No Contacts Yet</string>
    <string name="app_name">BillingBoss Contacts</string>
	<string name="customer_activity">BillingBoss Customers</string>
    <string name="contact_activity">Contacts</string>
    <string name="settings_activity">Settings</string>    
    <string name="database_activity">Database</string>    
    <string name="menu_customers">Customers</string>
    <string name="customers">Customers</string>
    <string name="menu_contacts">Contacts</string>    
    <string name="get_customers">Retrieve from BillingBoss</string>
    <string name="set_customers">Save to Phone</string>    
    <string name="menu_get_contacts">Get Contacts</string>    
	<string name="menu_set_contacts">Set Contacts</string>    
	<string name="menu_settings">Settings</string>
	<string name="menu_database">Database</string>
	<string name="billingboss">BillingBoss</string>			
	<string name="settings_bb_username">Username</string>
	<string name="settings_bb_password">Password</string>
	<string name="enter_username">Enter username...</string>		
	<string name="enter_password">Enter password...</string>
	<string name="contacts">Contacts</string>	
	<string name="contact_email">Email</string>		
	<string name="contact_address">Address</string>	
	<string name="contact_phone">Phone</string>	
	<string name="selection">Selection</string>	
	<string name="order">Order</string>	
	<string name="settings_err_not_saved">billingboss credentials not saved in settings</string>
	<string name="settings_err_email_not_saved">%s type not saved in settings</string>
	<string name="settings_err_not_created">username and password are not created in settings</string>
	<string name="settings_saved">settings saved</string>
	<string name="customer_err_null_response">no response received from billingboss</string>
	<string name="customer_err_not_saved">%s was not saved in customers</string>	
	<string name="customers_err_not_created">no customers are created</string>
	<string name="contacts_err_not_created">no contacts are created</string>
	<string name="customers_warn_activity_result">Warning: activity result not ok</string>
	<string name="BillingBoss">BillingBoss</string>	
	<string name="save">Save</string>
	<string name="read_customers">Read Customers</string>	
	<string name="read_contacts">Read Contacts</string>	
	<string name="reset_database">Reset Database</string>	
	<string name="send_file">Send Contacts to BB</string>
	<string name="address">Address</string>			
</resources>
